--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ openpyxl
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-ultralytics
 numpy
 opencv-python-headless
 pytz
+insightface
+onnxruntime
